fix search iframe visibility

--- a/src/stylesheets/pages/_index.scss
+++ b/src/stylesheets/pages/_index.scss
@@ -328,16 +328,16 @@ iframe { z-index:2; }
   .group-edit { z-index:1000; position:relative;
       box-shadow: 0 10px 20px rgba(0,0,0, 0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
-  .ValueList.main.ResExt { overflow: hidden; transition:1500ms; max-height:1200px;transition-delay: 0s; 
-    .extEntity.new { max-height:100px; overflow: hidden; transition:1000ms; max-height:1200px;transition-delay: 0s; }
-    & > label { transition:500ms; transition-delay: 0s; }
+  .ValueList.main.ResExt { overflow: hidden; transition:max-height 1500ms, overflow 0ms ease-in-out 500ms; max-height:1200px; background:white;
+    .extEntity.new { max-height:100px; overflow: hidden; transition:1000ms; max-height:1200px; }
+    & > label { transition:margin 500ms; transition-delay: 0s; }
   }
-  :not(.facet) > .card:not(.group-edit) .ValueList.main.ResExt {  transition:500ms; transition-delay: 0s; 
-    & > label { margin:0; margin-bottom:5px; transition:500ms; transition-delay: 0s; }    
+  :not(.facet) > .card:not(.group-edit) .ValueList.main.ResExt {  transition:max-height 500ms, overflow 0ms ease-in-out 500ms; 
+    & > label { margin:0; margin-bottom:5px; transition:margin 500ms; }    
     &.empty { max-height:30px; 
       .propLabel ~ div { border:none; }
     }
-    .extEntity.new { max-height:0; transition:500ms; transition-delay: 0s; }
+    .extEntity.new { max-height:0; transition:500ms;  }
     &:not(.empty) { max-height:95px; margin-bottom:15px;
       &::after { display:block; content:'...'; position:absolute;top:75px; left:25px; color:#bbb;}
       & > div { line-height:0; 
@@ -347,6 +347,9 @@ iframe { z-index:2; }
         & > .new { display:none;}
       }
     }    
+  }
+  :not(.facet) > .card.group-edit .ValueList.main.ResExt { overflow:visible; 
+    .extEntity.new { overflow: visible; } 
   }
 }
 
@@ -409,8 +412,9 @@ label ~ .selector {
 
 .MuiFormHelperText-root.Mui-error { min-height:20px; }
 
-.ValueList .ValueList { overflow: hidden; transition:1500ms; max-height:1000px;transition-delay: 0s;}
+.ValueList .ValueList { overflow: hidden; transition:1500ms; max-height:1000px;transition-delay: 0s; background:white;}
 .ValueList .facet:not(.edit) .empty.ValueList { max-height:0; transition:500ms; transition-delay: 0s;}
+.ValueList .facet.edit .ValueList { overflow:visible; }
 
 .facet:not(.edit):not(:hover) {
   .close-btn, .toggle-btn { display:none; }
